--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="card-body">
               <i class="bi bi-activity"></i>
               <h5 class="card-title custom-title">Lorem Ipsum</h5>
-              <p class="card-text">Voluptatum deleniti atque corrupti quos dolores et molestias excepturi</p>
+              <p class="card-text text-dark">Voluptatum deleniti atque corrupti quos dolores et molestias excepturi</p>
             </div>
           </div>
         </div>
@@ -276,7 +276,7 @@
             <div class="card-body">
               <i class="bi bi-bounding-box-circles"></i>
               <h5 class="card-title custom-title">Sed ut perspici</h5>
-              <p class="card-text ">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+              <p class="card-text text-dark ">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                 dolore
               </p>
             </div>
@@ -287,7 +287,7 @@
             <div class="card-body">
               <i class="bi bi-calendar-week"></i>
               <h5 class="card-title custom-title">Magni Dolores</h5>
-              <p class="card-text"> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+              <p class="card-text text-dark"> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
               </p>
             </div>
           </div>
@@ -298,7 +298,7 @@
               <i class="bi bi-wifi"></i>
               <!-- <i class="fa-solid fa-signal-stream"></i> -->
               <h5 class="card-title custom-title">Nemo Enim</h5>
-              <p class="card-text"> At vero eos at accusamus et iusto odio dignissimos </p>
+              <p class="card-text text-dark"> At vero eos at accusamus et iusto odio dignissimos </p>
             </div>
           </div>
         </div>
@@ -449,7 +449,7 @@
 
   <div class="container">
     <div class="part1">
-      <div class="card mb-3 custom-card" style="max-width: 600px;">
+      <div class="card mb-3 custom-card" style="max-width: 600px ;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/team/team-1.jpg"
@@ -458,8 +458,8 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title custom-color">Walter White</h5>
-              <p class="card-text">Chief Executive Officer</p>
-              <p class="card-text">Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+              <p class="card-text text-dark">Chief Executive Officer</p>
+              <p class="card-text text-dark">Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
               <i class="bi bi-twitter-x"></i>
               <i class="bi bi-facebook"></i>
               <i class="bi bi-instagram"></i>
@@ -481,8 +481,8 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title custom-color">Sarah Jhonson</h5>
-              <p class="card-text">Product Manager</p>
-              <p class="card-text">Aut maiores voluptates amet et quis praesentium qui senda para</p>
+              <p class="card-text text-dark">Product Manager</p>
+              <p class="card-text text-dark">Aut maiores voluptates amet et quis praesentium qui senda para</p>
               <i class="bi bi-twitter-x"></i>
               <i class="bi bi-facebook"></i>
               <i class="bi bi-instagram"></i>
@@ -502,8 +502,8 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title custom-color">William Anderson</h5>
-              <p class="card-text">CTO</p>
-              <p class="card-text">Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
+              <p class="card-text text-dark">CTO</p>
+              <p class="card-text text-dark">Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
               <i class="bi bi-twitter-x"></i>
               <i class="bi bi-facebook"></i>
               <i class="bi bi-instagram"></i>
@@ -522,8 +522,8 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title custom-color">Amanda Jepson</h5>
-              <p class="card-text">Accountan</p>
-              <p class="card-text">Dolorum tempora officiis odit laborum officiis et et accusamus</p>
+              <p class="card-text text-dark">Accountant</p>
+              <p class="card-text text-dark">Dolorum tempora officiis odit laborum officiis et et accusamus</p>
               <i class="bi bi-twitter-x"></i>
               <i class="bi bi-facebook"></i>
               <i class="bi bi-instagram"></i>
@@ -534,57 +534,62 @@
       </div>
     </div>
 
-    <div id="price">
-      <h1>PRICING</h1>
-      <div class="container">
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-        <div class="pricing-plan">
-          <div class="card">
-            <h3>Free Plan</h3>
-            <h1><sup>$</sup>0</h1>
-            <p>Per month</p>
-            <div class="price-des">
-              <p><i class="fas fa-check"></i>Quam adipiscing vitae proin</p>
-              <p><i class="fas fa-check"></i>Nec feugiat nisl pretium</p>
-              <p><i class="fas fa-check"></i>Nulla at volutpat diam uteera</p>
-              <p class="strikethrough"><i class="fas fa-times"></i> Pharetra massa massa ultricies</p>
-              <p class="strikethrough"><i class="fas fa-times"></i> Massa ultricies mi quis hendrerit</p>
-            </div>
-            <div class="price-btn"><a href="#">Buy Now</a></div>
-          </div>
-          <div class="card">
-            <h3>Business Plan</h3>
-            <h1><sup>$</sup>29</h1>
-            <p>Per month</p>
-            <div class="price-des">
-              <p><i class="fas fa-check"></i>Quam adipiscing vitae proin</p>
-              <p><i class="fas fa-check"></i>Nec feugiat nisl pretium</p>
-              <p><i class="fas fa-check"></i>Nulla at volutpat diam uteera</p>
-              <p><i class="fas fa-check"></i>Pharetra massa massa ultricies</p>
-              <p><i class="fas fa-check"></i>Massa ultricies mi quis hendrerit</p>
-
-
-            </div>
-            <div class="price-btn"><a href="#">Buy Now</a></div>
-          </div>
-          <div class="card">
-            <h3>Developer Plan</h3>
-            <h1><sup>$</sup>49</h1>
-            <p>Per month</p>
-            <div class="price-des">
-              <p><i class="fas fa-check"></i>Quam adipiscing vitae proin</p>
-              <p><i class="fas fa-check"></i>Nec feugiat nisl pretium</p>
-              <p><i class="fas fa-check"></i>Nulla at volutpat diam uteera</p>
-              <p><i class="fas fa-check"></i>Pharetra massa massa ultricies</p>
-              <p><i class="fas fa-check"></i>Massa ultricies mi quis hendrerit</p>
-            </div>
-            <div class="price-btn"><a href="#">Buy Now</a></div>
-          </div>
+    <div class="container-fluid1 px-5 p-6">
+      <div class="row">
+        <div class="col-12 text-center mb-4">
+          <div id="heading1" class="display-6 fw-bold">PRICING</div>
+          <div id="next" class="display-6 fw-light">Necessitatibus eius consequatur ex aliquid fuga eum quidem
+            sint
+            consectetur velit</div>
         </div>
       </div>
     </div>
+
+    <div class="pricing-plan">
+      <div class="card">
+        <h3>Free Plan</h3>
+        <h1><sup>$</sup>0</h1>
+        <p>Per month</p>
+        <div class="price-des">
+          <p><i class="fas fa-check"></i>Quam adipiscing vitae proin</p>
+          <p><i class="fas fa-check"></i>Nec feugiat nisl pretium</p>
+          <p><i class="fas fa-check"></i>Nulla at volutpat diam uteera</p>
+          <p class="strikethrough"><i class="fas fa-times"></i> Pharetra massa massa ultricies</p>
+          <p class="strikethrough"><i class="fas fa-times"></i> Massa ultricies mi quis hendrerit</p>
+        </div>
+        <div class="price-btn"><a href="#">Buy Now</a></div>
+      </div>
+      <div class="card">
+        <h3>Business Plan</h3>
+        <h1><sup>$</sup>29</h1>
+        <p>Per month</p>
+        <div class="price-des">
+          <p><i class="fas fa-check"></i>Quam adipiscing vitae proin</p>
+          <p><i class="fas fa-check"></i>Nec feugiat nisl pretium</p>
+          <p><i class="fas fa-check"></i>Nulla at volutpat diam uteera</p>
+          <p><i class="fas fa-check"></i>Pharetra massa massa ultricies</p>
+          <p><i class="fas fa-check"></i>Massa ultricies mi quis hendrerit</p>
+
+
+        </div>
+        <div class="price-btn"><a href="#">Buy Now</a></div>
+      </div>
+      <div class="card">
+        <h3>Developer Plan</h3>
+        <h1><sup>$</sup>49</h1>
+        <p>Per month</p>
+        <div class="price-des">
+          <p><i class="fas fa-check"></i>Quam adipiscing vitae proin</p>
+          <p><i class="fas fa-check"></i>Nec feugiat nisl pretium</p>
+          <p><i class="fas fa-check"></i>Nulla at volutpat diam uteera</p>
+          <p><i class="fas fa-check"></i>Pharetra massa massa ultricies</p>
+          <p><i class="fas fa-check"></i>Massa ultricies mi quis hendrerit</p>
+        </div>
+        <div class="price-btn"><a href="#">Buy Now</a></div>
+      </div>
+    </div>
   </div>
-  </div>
+
 
   <div class="container-fluid px-5 p-6">
     <div class="row">
